# reaction-yield-prediction

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: reaction-yield-ml.yml
data/: DATA_CARD.md  dataset_manifest.json
docs/: STRUCTURE_AWARE_REACTION_EXTENSION.md  data_card.md  model_card.md
docs/notebooks/: reaction_yield_ml_walkthrough.ipynb
portfolio_hardening_audit/: github_metadata_todo.md  initial_audit.json  initial_audit.md  reaction_fix_report.json  reaction_fix_report.md
reports/: active_learning_report.md  data_audit_report.md  dataset_selection_report.md  existing_record_ranking_report.md  feature_engineering_report.md  final_project_report.md  final_quality_gate_report.md  model_benchmark_report.md  model_interpretability_report.md  model_quality_review_report.md  reaction_cleaning_report.md  run_log.md  run_state.json  uncertainty_calibration_report.md  validation_design_report.md
reports/metrics/: active_learning_metrics.json  data_audit_metrics.json  dataset_selection_metrics.json  existing_record_ranking_metrics.json  feature_engineering_metrics.json  final_quality_gate_report.json  final_summary.json  model_benchmark_metrics.json  model_interpretability_metrics.json  model_quality_review_metrics.json  (+4 more)
scripts/: 01_audit_dataset.py  02_clean_reactions.py  05_train_and_evaluate.py  08_rank_existing_records.py  10_build_final_report.py  11_final_quality_gate.py
tests/: test_data_loading.py  test_metrics_schema.py  test_no_target_leakage.py  test_reports_exist.py  test_splits.py
(+33 files in other folders)
