[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reaction-yield-ml"
version = "0.1.0"
description = "Retrospective public-data HTE reaction-yield modeling benchmark"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "openpyxl>=3.1",
  "joblib>=1.3",
  "pytest>=7.4",
  "nbformat>=5.9"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/reaction_yield_ml/quality_checks"]
pythonpath = ["src"]
addopts = "-q"
